--- a/layered-simple-common/pom.xml
+++ b/layered-simple-common/pom.xml
@@ -5,23 +5,23 @@
     <parent>
         <artifactId>layered-simple-web</artifactId>
         <groupId>com.newland.balbaxmx</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>layered-simple-common</artifactId>
+    <packaging>jar</packaging>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+    <artifactId>layered-simple-common</artifactId>
     <properties>
         <java.version>1.8</java.version>
     </properties>
