--- a/layered-simple-mapper/pom.xml
+++ b/layered-simple-mapper/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <artifactId>layered-simple-web</artifactId>
         <groupId>com.newland.balbaxmx</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <artifactId>layered-simple-mapper</artifactId>
 
 
