--- a/layered-simple-module/pom.xml
+++ b/layered-simple-module/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <artifactId>layered-simple-web</artifactId>
         <groupId>com.newland.balbaxmx</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <artifactId>layered-simple-module</artifactId>
 
 
@@ -16,7 +16,13 @@
         <dependency>
             <groupId>com.newland.balbaxmx</groupId>
             <artifactId>layered-simple-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <!--集成分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.1.0</version>
         </dependency>
     </dependencies>
 </project>
