--- a/layered-simple-redis/pom.xml
+++ b/layered-simple-redis/pom.xml
@@ -21,24 +21,36 @@
             </plugin>
         </plugins>
     </build>
-    <artifactId>layered-simple-service-impl</artifactId>
 
-
+    <artifactId>layered-simple-redis</artifactId>
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
     <dependencies>
         <dependency>
-            <groupId>com.newland.balbaxmx</groupId>
-            <artifactId>layered-simple-service</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.2.4.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>com.newland.balbaxmx</groupId>
-            <artifactId>layered-simple-mapper</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.8.0</version>
         </dependency>
         <dependency>
-            <groupId>com.newland.balbaxmx</groupId>
-            <artifactId>layered-simple-redis</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.2.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.51</version>
         </dependency>
     </dependencies>
 </project>
