--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.newland.balbaxmx</groupId>
     <artifactId>layered-simple-web</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <modules>
         <module>layered-simple-service</module>
         <module>layered-simple-common</module>
@@ -15,9 +15,14 @@
         <module>layered-simple-mapper</module>
         <module>layered-simple-service-impl</module>
         <module>layered-simple-launch</module>
+        <module>layered-simple-redis</module>
     </modules>
 
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
 
-    <dependencies>
-    </dependencies>
+    <dependencyManagement>
+    </dependencyManagement>
+
 </project>
