--- a/layered-simple-launch/pom.xml
+++ b/layered-simple-launch/pom.xml
@@ -51,6 +51,27 @@
             <artifactId>layered-simple-service-impl</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
+        <!--集成 数据库 mappers 连接池 分页开始-->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
     </dependencies>
 
     <profiles>
