--- a/layered-simple-launch/src/main/resources/develop/application.yml
+++ b/layered-simple-launch/src/main/resources/develop/application.yml
@@ -5,6 +5,15 @@ server:
 spring:
   main:
     allow-bean-definition-overriding: true #当遇到同样名字的时候，是否允许覆盖注册
+  datasource:
+      driver-class-name: com.mysql.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/blx_data?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+      username: root
+      password: root_123
+      type: com.alibaba.druid.pool.DruidDataSource
+  jackson:
+    date-format: yyyy-MM-dd
+    time-zone: GMT+8
   redis:
 #    database: 0 # 单点--索引
 #    host: 127.0.0.1 # 单点--
@@ -21,6 +30,16 @@ spring:
         max-active: 8 #最大连接数
         max-idle: 8 #最大空闲连接
         min-idle: 4  # 连接池中的最小空闲连接
+mybatis:
+  mapperLocations: classpath*:mappers/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: true
+  type-aliases-package: com.newland.balbaxmx.layered.simple.module
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
 logging:
   config:
     classpath: log4j2.xml
