--- a/layered-simple-mapper/pom.xml
+++ b/layered-simple-mapper/pom.xml
@@ -13,5 +13,16 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>com.newland.balbaxmx</groupId>
+            <artifactId>layered-simple-module</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
+        <!--集成 数据库 mappers 连接池 分页开始-->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.1.5</version>
+        </dependency>
     </dependencies>
 </project>
