--- a/layered-simple-common/pom.xml
+++ b/layered-simple-common/pom.xml
@@ -86,5 +86,18 @@
             <artifactId>java-unrar</artifactId>
             <version>1.7.0-8</version>
         </dependency>
+
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>1.5.2</version><!-- or latest version -->
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
